fix: correct style.css, (SAN, 12 March 2023, 00.02)

--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -44,10 +44,6 @@
 
 
 /* MAIN */
-.main-container {
-    /* border: 3px solid black; */
-}
-
 .block-mems {
     display: flex;
     flex-direction: column;
@@ -130,7 +126,7 @@
     /* margin: 0 auto; */
     /* height: 12.25em; */
     height: 21.875em;
-    border: 3px solid red;
+    /* border: 3px solid red; */
     /* width: 150px;
     height: 150px; */
 
