--- a/cssBayan/style.css
+++ b/cssBayan/style.css
@@ -11,7 +11,6 @@
     background-color: #FFFFFF;
     color: #000;
     border: 1px solid red;
-
 }
 
 .header,
@@ -49,6 +48,7 @@
     flex-direction: column;
     width: 60%;
     margin: 0 auto;
+    padding-bottom: 1.25em;
     cursor: pointer;
     transition: 0.5s;
     /* border: 3px solid red; */
@@ -59,33 +59,38 @@
 }
 .mems-item {
     display: flex;
-    flex-direction: column;
-    width: 100%;
-    /* margin: 0 auto; */
-    /* border: 3px solid violet; */
-}
-
-.item {
-    display: flex;
+    flex-direction: row;
+    width: 90%;
+    margin: 0 auto;
+    /* border: 1px solid violet; */
 }
 
 .item-top {
     display: flex;
-    flex-direction: row;
-    width: 100%;
-    /* margin: 0 auto; */
-    height: 3.75em;
-    justify-content: space-between;
-    align-items: center;
+    flex-direction: column;
+    width: 90%;
     cursor: pointer;
     transition: 0.5s;
-    /* border: 3px solid green; */
+    /* border: 1px solid blue; */
 }
 
+.item-bottom {
+    width: 10%;
+    cursor: pointer;
+    transition: 0.5s;
+}
 .subtitle {
     width: 80%;
     font-size: 1.4375em;
     /* border: 3px solid red; */
+}
+.plus-cross {
+    display: flex;
+    /* width: 20%; */
+    /* width: 1.8em; */
+    height: 1.8em;
+    justify-content: flex-end;
+    border: 3px solid red;
 }
 
 .plus-cross {
@@ -93,7 +98,8 @@
     width: 20%;
     justify-content: flex-end;
     /* border: 3px solid red; */
-}
+ }
+
 .plus,
 .xmark {
     width: 1.8em;
@@ -101,7 +107,6 @@
     /* border-style: none;
     border: transparent; */
 }
-
 
 .plus {
     display: none;
@@ -117,23 +122,8 @@
     background-repeat: no-repeat;
 }
 
-.item-bottom {
-    display: flex;
-    /* display: none; */
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    /* margin: 0 auto; */
-    /* height: 12.25em; */
-    height: 21.875em;
-    /* border: 3px solid red; */
-    /* width: 150px;
-    height: 150px; */
-
-}
-
 .img-mem {
-    /* display: none; */
+    display: none;
     width: 21.875em; 
     height: 21.875em;
     /* width: 350px;
@@ -141,16 +131,15 @@
     margin: 0 auto;
 }
 
-
-.item-top:hover .item-bottom .img-mem{
+.mems-item:hover .img-mem{
     display: flex;
 
 }
-.item-top:hover .plus{
+.mems-item:hover .plus{
     display: none;
 }
 
-.item-top:hover .xmark{
+.mems-item:hover .xmark{
     display: block;
 }
 
